tests/baselines/reference/fatarrowfunctionsInFunctionParameterDefaults(strict=true).errors.txt
fatarrowfunctionsInFunctionParameterDefaults.ts(1,23): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== fatarrowfunctionsInFunctionParameterDefaults.ts (1 errors) ====
    function fn(x = () => this, y = x()) {
                          ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    
        // should be 4
        return y;
    
    }
    
    fn.call(4); // Should be 4
    